--- a/src/main/resources/templates/aperturaIncidentes.hbs
+++ b/src/main/resources/templates/aperturaIncidentes.hbs
@@ -103,28 +103,17 @@
 <div class="body-content col-10" style="margin-left: 20%;">
     <br>
     <h3 class="mb-5">Apertura de Incidentes</h3>
-              
-    <form action="#">
+    <h3 class="mb-5">{{mensajeExito}}</h3>
+
+    <form method="POST" action="/aperturaIncidentes">
     <div class="form-outline mb-4">
-      <label class="form-label" for="typeEmailX-2">Establecimiento</label>
-      <input style="width: auto;" type="email" id="typeEmailX-2" class="form-control form-control-lg" />
+      <label class="form-label" for="typeEmailX-2">Descripción</label>
+      <input name = "descripcion" style="width: auto;" type="text" id="typeEmailX-2" class="form-control form-control-lg" />
     </div>
 
     <div class="form-outline mb-4">
-      <label class="form-label" for="typePasswordX-2">Nombre del Servicio</label>
-      <input style="width: auto;" type="password" id="typePasswordX-2" class="form-control form-control-lg" />
-    </div>
-
-   
-
-    <div class="form-outline mb-4">
-            <label class="form-label" for="typePasswordX-2">Comunidad Afectada</label>
-            <input style="width: auto;" type="password" id="typePasswordX-2" class="form-control form-control-lg" />
-    </div>
-
-    <div class="form-outline mb-4">
-            <label class="form-label" for="typePasswordX-2">Observaciones</label>
-            <input style="width: auto;" type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+      <label class="form-label" for="typePasswordX-2">Tiempo de Resolución</label>
+      <input name = "tiempoResolucion" style="width: auto;" type="text" id="typePasswordX-2" class="form-control form-control-lg" />
     </div>
     <button class="btn btn-primary btn-lg btn-block" type="submit">Enviar</button>
 </form>
