--- a/src/main/resources/templates/listadoIncidentes.hbs
+++ b/src/main/resources/templates/listadoIncidentes.hbs
@@ -118,9 +118,11 @@
                 {{#each incidentes}}
               <tbody>
                 <tr>
-                  <td>{{descripcion}}</td>
-                  <td>{{tiempoResolucion}}</td>
-                  <td>{{resuelto}}</td>
+                    <td>{{id}}</td>
+                    <td>{{observaciones}}</td>
+                    <td>{{hora_de_inicio}}</td>
+                    <td>{{hora_de_cierre}}</td>
+                    <td>{{resuelto}}</td>
 
                 </tr>
                 {{/each}}
