--- a/src/main/resources/public/css/style.css
+++ b/src/main/resources/public/css/style.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 /* Import Google font - Poppins */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 * {
@@ -522,4 +521,18 @@ body.dark {
     left: -100%;
   }
 }
->>>>>>> WebApp
+
+.exito-mensaje {
+    background-color: #dff0d8;
+    border: 1px solid #d6e9c6;
+    color: #3c763d;
+    padding: 10px;
+    margin: 10px 0;
+}
+.error-mensaje {
+    background-color: #f2dede;
+    border: 1px solid #ebccd1;
+    color: #a94442;
+    padding: 10px;
+    margin: 10px 0;
+}
