--- a/src/main/resources/templates/home.hbs
+++ b/src/main/resources/templates/home.hbs
@@ -52,7 +52,6 @@
                 <a href="/aperturaIncidentes" class="nav_link sublink">Apertura de Incidentes</a>
                 <a href="/cierreIncidentes" class="nav_link sublink">Cierre de Incidentes</a>
                 <a href="/listadoIncidentes" class="nav_link sublink">Listado de Incidentes</a>
-                <a href="#" class="nav_link sublink">Sugerencia de Revisión</a>
                 <a href="/visualizacionRankings" class="nav_link sublink">Visualización de Rankings</a>
                 <a href="/cargaDeEntidadesOrg.html" class="nav_link sublink">Carga entidades</a>
             </ul>
@@ -70,12 +69,10 @@
               <i class="bx bx-chevron-right arrow-left"></i>
             </div>
 
-            <ul class="menu_items submenu">
-              <a href="#" class="nav_link sublink">Administración de Usuarios</a>
-              <a href="#" class="nav_link sublink">Nav Sub Link</a>
-              <a href="#" class="nav_link sublink">Nav Sub Link</a>
-              <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            </ul>
+              <ul class="menu_items submenu">
+                  <a href="/adminUsuario" class="nav_link sublink">Administración de Usuarios</a>
+
+              </ul>
           </li>
           <!-- end -->
         </ul>
