--- a/src/main/resources/templates/adminUsuario.hbs
+++ b/src/main/resources/templates/adminUsuario.hbs
@@ -72,10 +72,10 @@
               <i class="bx bx-chevron-right arrow-left"></i>
             </div>
 
-              <ul class="menu_items submenu">
-                  <a href="/adminUsuario" class="nav_link sublink">Administración de Usuarios</a>
+            <ul class="menu_items submenu">
+              <a href="/adminUsuario" class="nav_link sublink">Administración de Usuarios</a>
 
-              </ul>
+            </ul>
           </li>
           <!-- end -->
         </ul>
@@ -100,35 +100,30 @@
 
 <div class="body-content col-10" style="margin-left: 20%;">
     <br>
-    <h3 class="mb-5">Listado de Incidentes</h3>
-        
-    <div class="container mt-3">
-           
-            <table class="table table-striped">
-              <thead>
-                <tr>
-                  <th>Descripción</th>
-                  <th>Tiempo de Resolución</th>
-                  <th>Resuelto</th>
+    <h3 class="mb-5">Administración de Usuarios</h3>
 
-                </tr>
-              </thead>
-                {{#each incidentes}}
-              <tbody>
-                <tr>
-                    <td>{{id}}</td>
-                    <td>{{observaciones}}</td>
-                    <td>{{hora_de_inicio}}</td>
-                    <td>{{hora_de_cierre}}</td>
-                    <td>{{resuelto}}</td>
+    {{#if exitoMensaje}}
+        <div class="mb-5 exito-mensaje">{{exitoMensaje}}</div>
+    {{/if}}
 
-                </tr>
-                {{/each}}
+    {{#if errorMensaje}}
+        <div class="error-mensaje">{{errorMensaje}}</div>
+    {{/if}}
 
-              </tbody>
-            </table>
-          </div>
-    
+
+    <form method="POST" action="/adminUsuario">
+
+        <div class="form-outline mb-4">
+            <label class="form-label" for="login">Usuario</label>
+            <input name = "login" style="width: auto;" type="text" id="login" value="{{usuario.login}}" class="form-control form-control-lg" />
+        </div>
+        <div class="form-outline mb-4">
+            <label class="form-label" for="pass">Password</label>
+            <input name = "pass" style="width: auto;" type="text" id="pass" value="{{usuario.pass}}"class="form-control form-control-lg" />
+        </div>
+
+    <button class="btn btn-primary btn-lg btn-block" type="submit">Enviar</button>
+</form>
 </div>
 </div>
 </div>
