--- a/src/main/resources/templates/cargaDeEntidadesOrg.hbs
+++ b/src/main/resources/templates/cargaDeEntidadesOrg.hbs
@@ -57,9 +57,9 @@
                     <a href="/aperturaIncidentes.hbs" class="nav_link sublink">Apertura de Incidentes</a>
                     <a href="/cierreIncidentes.hbs" class="nav_link sublink">Cierre de Incidentes</a>
                     <a href="/listadoIncidentes.hbs" class="nav_link sublink">Listado de Incidentes</a>
-                    <a href="#" class="nav_link sublink">Sugerencia de Revisión</a>
                     <a href="/visualizacionRankings.hbs" class="nav_link sublink">Visualización de Rankings</a>
             </ul>
+
           </li>
           <!-- end -->
 
@@ -74,12 +74,10 @@
               <i class="bx bx-chevron-right arrow-left"></i>
             </div>
 
-            <ul class="menu_items submenu">
-              <a href="#" class="nav_link sublink">Administración de Usuarios</a>
-              <a href="#" class="nav_link sublink">Nav Sub Link</a>
-              <a href="#" class="nav_link sublink">Nav Sub Link</a>
-              <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            </ul>
+              <ul class="menu_items submenu">
+                  <a href="/adminUsuario" class="nav_link sublink">Administración de Usuarios</a>
+
+              </ul>
           </li>
           <!-- end -->
         </ul>
