--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/public/css/style.css" />
-    <link rel="stylesheet" href="/public/css/bootstrap-grid.css" />
-    <link rel="stylesheet" href="/public/css/bootstrap.css" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="/css/bootstrap.css" />
     <title>Document</title>
 </head>
 <body>
@@ -18,23 +18,31 @@
                         <div class="card-body p-5 text-center">
               
                           <h3 class="mb-5">Iniciar Sesión</h3>
-              
-                          <div class="form-outline mb-4">
-                            <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
-                            <label class="form-label" for="typeEmailX-2">Email</label>
-                          </div>
-              
-                          <div class="form-outline mb-4">
-                            <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
-                            <label class="form-label" for="typePasswordX-2">Password</label>
-                          </div>
-              
+
+                            {{#if errorMensaje}}
+                                <div class="error-mensaje">{{errorMensaje}}</div>
+                            {{/if}}
+
+                            <form method="POST" action="/home">
+
+                                <div class="form-outline mb-4">
+                                <input type="text" id="login" name ="login" class="form-control form-control-lg" />
+                                <label class="form-label" for="typeEmailX-2">Email</label>
+                              </div>
+
+                              <div class="form-outline mb-4">
+                                <input type="text" id="pass" name="pass" class="form-control form-control-lg" />
+                                <label class="form-label" for="typePasswordX-2">Password</label>
+                              </div>
+
+                                <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+
+                            </form>
                           <!-- Checkbox -->
                           
               
-                          <a href="home.hbs"><button class="btn btn-primary btn-lg btn-block" type="submit">Login</button></a>
-              
-                          <hr class="my-4">
+
+
               
                         
               
