--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -27,12 +27,12 @@
 
                                 <div class="form-outline mb-4">
                                 <input type="text" id="login" name ="login" class="form-control form-control-lg" />
-                                <label class="form-label" for="typeEmailX-2">Email</label>
+                                <label class="form-label" for="login">Usuario</label>
                               </div>
 
                               <div class="form-outline mb-4">
-                                <input type="text" id="pass" name="pass" class="form-control form-control-lg" />
-                                <label class="form-label" for="typePasswordX-2">Password</label>
+                                <input type="password" id="pass" name="pass" class="form-control form-control-lg" />
+                                <label class="form-label" for="pass">Contraseña</label>
                               </div>
 
                                 <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
