--- a/src/main/resources/templates/cierreIncidentes.hbs
+++ b/src/main/resources/templates/cierreIncidentes.hbs
@@ -55,11 +55,43 @@
                     <a href="/cierreIncidentes" class="nav_link sublink">Cierre de Incidentes</a>
                     <a href="/listadoIncidentes" class="nav_link sublink">Listado de Incidentes</a>
                     <a href="/visualizacionRankings" class="nav_link sublink">Visualización de Rankings</a>
-                    <a href="/cargaDeEntidadesOrg" class="nav_link sublink">Carga entidades</a>
             </ul>
           </li>
           <!-- end -->
+            <!-- start -->
+            <li class="item">
+                <div href="#" class="nav_link submenu_item">
+              <span class="navlink_icon">
+                <i class="bx bx-world"></i>
+              </span>
+                    <span class="navlink">Comunidades</span>
+                    <i class="bx bx-chevron-right arrow-left"></i>
+                </div>
 
+                <ul class="menu_items submenu">
+                    <a href="/listaComunidades" class="nav_link sublink">Lista de Comunidades</a>
+                    <a href="/altaComunidades" class="nav_link sublink">Alta de Comunidad</a>
+                    <a href="/cierreComunidad" class="nav_link sublink">Cierre de Comunidad</a>
+
+                </ul>
+            </li>
+            <!-- end -->
+            <!-- start -->
+            <li class="item">
+                <div href="#" class="nav_link submenu_item">
+              <span class="navlink_icon">
+                <i class="bx bx-home-alt"></i>
+              </span>
+                    <span class="navlink">Entidades</span>
+                    <i class="bx bx-chevron-right arrow-left"></i>
+                </div>
+
+                <ul class="menu_items submenu">
+                    <a href="/altaEntidades" class="nav_link sublink">Alta de Entidades</a>
+                    <a href="/listaEntidades" class="nav_link sublink">Lista de Entidades</a>
+                </ul>
+            </li>
+            <!-- end -->
           <!-- duplicate this li tag if you want to add or remove  navlink with submenu -->
           <!-- start -->
           <li class="item">
@@ -111,7 +143,7 @@
     <form method="POST" action="/cierreIncidentes">
         <div class="form-outline mb-4">
             <label class="form-label" for="typeEmailX-2">ID</label>
-            <input name = "id_incidente" style="width: auto;" type="text" id="typeEmailX-2" class="form-control form-control-lg" />
+            <input name = "id_incidente" style="width: auto;" type="text" id="typeEmailX-2" class="form-control col-2 form-control-lg" />
         </div>
 
 
