--- a/src/main/resources/templates/listadoIncidentes.hbs
+++ b/src/main/resources/templates/listadoIncidentes.hbs
@@ -54,13 +54,44 @@
                     <a href="/aperturaIncidentes" class="nav_link sublink">Apertura de Incidentes</a>
                     <a href="/cierreIncidentes" class="nav_link sublink">Cierre de Incidentes</a>
                     <a href="/listadoIncidentes" class="nav_link sublink">Listado de Incidentes</a>
-                    <a href="/cargaDeEntidades" class="nav_link sublink">Sugerencia de Revisión</a>
                     <a href="/visualizacionRankings" class="nav_link sublink">Visualización de Rankings</a>
-                    <a href="/cargaDeEntidadesOrg" class="nav_link sublink">Carga entidades</a>
             </ul>
           </li>
           <!-- end -->
+            <!-- start -->
+            <li class="item">
+                <div href="#" class="nav_link submenu_item">
+              <span class="navlink_icon">
+                <i class="bx bx-world"></i>
+              </span>
+                    <span class="navlink">Comunidades</span>
+                    <i class="bx bx-chevron-right arrow-left"></i>
+                </div>
 
+                <ul class="menu_items submenu">
+                    <a href="/listaComunidades" class="nav_link sublink">Lista de Comunidades</a>
+                    <a href="/altaComunidades" class="nav_link sublink">Alta de Comunidad</a>
+                    <a href="/cierreComunidad" class="nav_link sublink">Cierre de Comunidad</a>
+
+                </ul>
+            </li>
+            <!-- end -->
+            <!-- start -->
+            <li class="item">
+                <div href="#" class="nav_link submenu_item">
+              <span class="navlink_icon">
+                <i class="bx bx-home-alt"></i>
+              </span>
+                    <span class="navlink">Entidades</span>
+                    <i class="bx bx-chevron-right arrow-left"></i>
+                </div>
+
+                <ul class="menu_items submenu">
+                    <a href="/altaEntidades" class="nav_link sublink">Alta de Entidades</a>
+                    <a href="/listaEntidades" class="nav_link sublink">Lista de Entidades</a>
+                </ul>
+            </li>
+            <!-- end -->
           <!-- duplicate this li tag if you want to add or remove  navlink with submenu -->
           <!-- start -->
           <li class="item">
@@ -103,15 +134,29 @@
     <h3 class="mb-5">Listado de Incidentes</h3>
         
     <div class="container mt-3">
-           
-            <table class="table table-striped">
+        <div class="row">
+            <div class="col-md-3"> <!-- Ajusta el tamaño del input a 4 columnas en pantallas medianas -->
+                <input type="text" id="filtroTabla" class="form-control form-control-lg" placeholder="Comunidad...">
+            </div>
+            <div class="col-md-3">
+                <select id="filtroResuelto" class="form-select">
+                    <option value="">Mostrar Todos</option>
+                    <option value="SI">Resuelto</option>
+                    <option value="NO">No Resuelto</option>
+                </select>
+            </div>
+        </div>
+
+        <table class="table table-striped">
               <thead>
                 <tr>
                     <th>ID</th>
                     <th>Descripción</th>
-                  <th>Fecha de Inicio</th>
-                    <th>Fecha de Fin</th>
-                  <th>Resuelto</th>
+                    <th>Comunidad</th>
+                    <th>Establecimiento</th>
+                    <th>Fecha de Inicio</th>
+                    <th>Fecha de Cierre</th>
+                    <th>Resuelto</th>
 
                 </tr>
               </thead>
@@ -120,6 +165,8 @@
                 <tr>
                     <td>{{id}}</td>
                     <td>{{observaciones}}</td>
+                    <td>{{comunidad}}</td>
+                    <td>{{establecimiento}}</td>
                     <td>{{hora_de_inicio}}</td>
                     <td>{{hora_de_cierre}}</td>
                     <td>{{resuelto}}</td>
@@ -129,6 +176,7 @@
 
               </tbody>
             </table>
+
           </div>
     
 </div>
@@ -136,5 +184,43 @@
 </div>
     <!-- JavaScript -->
     <script src="/js/script.js"></script>
+    <script src="/js/jquery-3.7.1.js"></script>
+
+  <script>
+      $(document).ready(function() {
+
+
+
+    $('#filtroTabla').on('input', function() {
+          console.log("hola me cambie");
+        var filtro = $(this).val().toLowerCase();
+        $('table.table tbody tr').each(function() {
+            var filaVisible = false;
+            $(this).find('td').each(function() {
+                if ($(this).text().toLowerCase().indexOf(filtro) !== -1) {
+                    filaVisible = true;
+                    return false; // Sale del bucle interno si se encuentra una coincidencia
+                }
+            });
+            $(this).toggle(filaVisible);
+        });
+    });
+
+
+
+
+    $('#filtroResuelto').change(function() {
+            var filtro = $(this).val();
+            $('table tbody tr').each(function() {
+                var valorResuelto = $(this).find('td:eq(6)').text(); // Índice 6 corresponde a la columna de Resuelto
+                if (filtro === '' || valorResuelto === filtro) {
+                    $(this).show();
+                } else {
+                    $(this).hide();
+                }
+            });
+        });
+});
+  </script>
   </body>
 </html>
